--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -148,7 +148,7 @@
 {% if messages %}
         <ul class="messagelist">
 {% for i in messages %}
-            <li class="{{ i.tags }}">{{ i }}</li>
+            <li class="{{ i.tags }}">{{ i|striptags }}</li>
 {% endfor %}
         </ul>
 {% endif %}
