--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -13,7 +13,7 @@
             <div class="loading">Loading...<br /></div>
             <ul style="display:none;">
 {% for i in ad %}
-            <li><a href="{{ i.url }}"><img src="{{ i.img.url }}" width="930px" height="240px" /></a></li>
+            <li><a href="{{ i.url }}" target="_blank"><img src="{{ i.img.url }}" width="930px" height="240px" /></a></li>
 {% endfor %}
             </ul>
         </div>
