--- a/finance/templates/financeui.htm
+++ b/finance/templates/financeui.htm
@@ -18,7 +18,7 @@
             <td><a href="{{ request.pPath.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
             <td>{{ i.logcs.consignee }} [ {{ i.logcs.tel }} ]</td>
             <td>200.00 | 11.00 | 189.00 | {{ i.fnc.name }}</td>
-            <td>{{ i.get_status_display }} | {{ i.fnc.get_status_display }} | {{ i.ordship.get_status_display }}</td>
+            <td>{{ i.get_status_display }} | {{ i.fnc.get_status_display }} | {{ i.logcs.get_status_display }}</td>
             {% optr i %}
           </tr>
 {% for item in i.orditem_set.all %}
