--- a/new31/templates/404.html
+++ b/new31/templates/404.html
@@ -1,129 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>{% block title %}{{ title }}{% endblock %} 31客——源自欧洲经典口味！</title>
-    <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
-    <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
-    {% block meta %}{% endblock %}
-    <link rel="stylesheet" href="/css/shop/base.css" />
-    <link rel="stylesheet" href="/css/shop/style.css" />
-    <link rel="stylesheet" href="/css/jquery.zebra_datepicker.css" />
-    <link rel="stylesheet" href="/css/jquery.jgd.dropdown.min.css" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.zebra_datepicker.js"></script>
-    <script type="text/javascript" src="/js/jquery.dialog.js"></script>
-    <script type="text/javascript" src="/js/jquery.jgd.dropdown.js"></script>
-    <script type="text/javascript" src="/js/shop/base.configuration.js"></script>
-{% block js %}{% endblock %}
-    <!--[if IE 6]>
-    <script type="text/javascript" src="/js/DD_belatedPNG.js"></script>
-    <script type="text/javascript">
-        DD_belatedPNG.fix('img, .logo');
-    </script>
-    <![endif]-->
-</head>
-<body>
-    <div id="header">
-        <div class="toolBar">
-            <a href="/" title="31客" class="logo" ></a>
-            <ul class="fl">
-                <li><a href="/pub/">大客户</a></li>
-                <li><a href="/about/">订购指南</a></li>
-                <li><a href="/ex/">K金换购</a></li>
-            </ul>
-            <ul class="fr">
-                <li>
-                    <form action="/search/" method="get">
-                        <input id="txtTopSearch" name="key" type="text" accesskey="s" class="topSearch" />
-                        <button type="submit" class="btn_search" title="搜索">搜索</button>
-                    </form>
-                </li>
-                <li class="messageBox">
-                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">{% if request.user.allmsgCount %}{{request.user.allmsgCount}}{% else %}0{% endif %}</span></a>
-                    <div id="pnlTopMessage" class="messagePop" style="display:none;">
-                        <h3>新消息</h3>
-                        <ul>
-                            <li><a href="/account/order/">新订单（ {% if request.user.newOrdCount %}{{request.user.newOrdCount}}{% else %}0{% endif %} ）</a></li>
-                            <li><a href="/account/messages/">新留言（ {% if request.user.newMsgCount %}{{request.user.newMsgCount}}{% else %}0{% endif %} ）</a></li>
-                        </ul>
-                        <a class="confirm" href="javascript:void(0)" onclick="clearMessageData();return false;">我知道了</a>
-                    </div>
-                </li>
-                <li><a href="/cart/">购物车</a></li>
-{% if request.user.is_authenticated %}
-                <li class="messageBox">
-                    <a id="lnkTopSetting" class="pic">设置<b></b></a>
-                    <div id="pnlTopProfile" class="messagePop" style="display: none;">
-                        <h3>{{ request.user}}</h3>
-                        <div class="editBox">
-                            <ul>
-                                <li class="email"><em>{{ request.user.email}}</em></li>
-                                <li><a href="/account/order/">我的订单</a></li>
-                                <li><a href="/account/settings/">个人设置</a></li>
-                                <li><a href="/account/changepwd/">修改密码</a></li>
-{% if request.user.is_staff %}
-                                <li><a href="/office/">管理中心</a></li>
-{% endif %}
-                            </ul>
-                        </div>
-                        <a class="confirm" href="/account/logout/">退出登录</a>
-                   </div>
-                </li>
-{% else %}
-                <li class="messageBox">
-                    <a href="/account/login/" id="lnkTopLogin" class="login">登录</a>
-                    <div id="loginMessage" class="messagePop" style="display: none;">
-                        <div class="topLoginBox">
-                            <form action="/account/login/" method="post">{% csrf_token %}
-                                <ul>
-                                    <li><label for="UserName">帐号：</label><input name="username" type="text" placeholder="用户名/邮箱" id="UserName" /></li>
-                                    <li><label for="Password">密码：</label><input name="password" type="password" id="Password" /></li>
-                                    <li align="right"><input class="btnGr bBtn" type="submit" value="登录" /><input type="hidden" name="next" value="/" /></li>
-                                </ul>
-                            </form>
-                        </div>
-                   </div>
-                </li>
-{% endif %}
-            </ul>
-        </div>
-    </div>
-{% block scrollBox %}{% endblock %}
-{% block subMenu %}
-    <div id="scrollTop">
-        <div class="bar">
-            <ul class="intro">
-                <li><p><span class="txt">喜欢就直接拨打电话吧，4000 - 5927 - 31。</span><br><span class="txtFrom">—— 31客</span></p></li>
-                <li><p><span class="txt">吃个31客的蛋糕，喝喝下午茶，最幸福了。</span><br><span class="txtFrom">—— 晴天浅唱（微博网友）</span></p></li>
-                <li><p><span class="txt">第一次吃到杏仁咖啡，叹为观止。</span><br><span class="txtFrom">—— 韦夏（当代生活报记者）</span></p></li>
-                <li><p><span class="txt">美食，同大家一齐分享。</span><br><span class="txtFrom">—— 31客</span></p></li>
-            </ul>
-            <ul class="menu">
-                <li><a  href="/tag/cake/">蛋糕</a></li>
-                <li><a href="/tag/cookie/">曲奇</a><span></span></li>
-                <li><a href="/tag/chocolate/">巧克力</a></li>
-                <li><a href="/tag/pie/">水果派</a></li>
-            </ul>
-        </div>
-    </div>
+{% extends "shop.base.htm" %}
+
+{% block content %}
+    <h1>哎哟, 404...</h1>
 {% endblock %}
-    <div id="content" class="clearfix">
-{% block content %}{% endblock %}
-    </div>
-    <div id="footer">
-        <div class="other">
-            <ul>
-<!--                 <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=672592854&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:672592854:4" height="16" border="0" alt="QQ" />672592854</a></li>
-                <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2310857615&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2310857615:4" height="16" border="0" alt="QQ" />2310857615</a></li>
-                <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2605043362&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2605043362:4" height="16" border="0" alt="QQ" />2605043362</a></li>
-                <li><a href="http://sae.sina.com.cn" target="_blank"><img src="http://static.sae.sina.com.cn/image/poweredby/117X12px.gif" title="Powered by Sina App Engine"></a></li> -->
-                <li><a href="home/about">订购专线: 4000-5927-31 | 客服电话：0771-5676753</a></li>
-                <li><a target="_blank" href="http://www.miibeian.gov.cn/">桂ICP备12002164号</a></li>
-            </ul>
-        </div>
-        <div class="footerLayer"></div>
-    </div>
-</body>
-</html>
