--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -56,7 +56,8 @@
         <div class="buyList">
             <h4>热销</h4>
             <ul>
-                <li><a href="/tag/evanescence/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133001b1a.jpg" alt="香浓巧克力" title="香浓巧克力" /></a></li>
+                <li><a href="/tag/香浓巧克力/"><img width="32" height="32" src="http://new31-media.stor.sinaapp.com/images/3133001b1d.jpg" alt="香浓巧克力" title="香浓巧克力" /></a></li>
+            </ul>
         </div>
     </div>
 {% endblock %}
