--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -127,7 +127,7 @@
                 <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2310857615&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2310857615:4" height="16" border="0" alt="QQ" />2310857615</a></li>
                 <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2605043362&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2605043362:4" height="16" border="0" alt="QQ" />2605043362</a></li>
                 <li><a href="http://sae.sina.com.cn" target="_blank"><img src="http://static.sae.sina.com.cn/image/poweredby/117X12px.gif" title="Powered by Sina App Engine"></a></li> -->
-                <li><a href="home/about">订购专线: 4000-5927-31 | 客服电话：0771-5676753</a></li>
+                <li><a href="/home/about/">订购专线: 4000-5927-31 | 客服电话：0771-5676753</a></li>
                 <li><a target="_blank" href="http://www.miibeian.gov.cn/">桂ICP备12002164号</a></li>
             </ul>
         </div>
