--- a/shop/static/shop/css/base.css
+++ b/shop/static/shop/css/base.css
@@ -876,7 +876,8 @@ header,footer,article,aside,section,nav,menu,hgroup {
 	padding: 0 10px;
 	border-radius: 4px;
 	line-height: 25px;
-	color: #FFF
+	color: #FFF;
+	box-shadow: 2px 2px 3px #A7A3A3;
 }
 
 .tags_DD9797:hover,.tags_BA5252:hover,.tags_D97D0F:hover,.tags_E3BA9B:hover,.tags_71BFCD:hover,.tags_95BADD:hover,.tags_A7CF50:hover {
@@ -1556,6 +1557,7 @@ header,footer,article,aside,section,nav,menu,hgroup {
 	min-width: 960px;
 	background: #FFF;
 	position: relative;
+	margin-bottom:2px;
 }
 
 .other {
@@ -1583,11 +1585,11 @@ header,footer,article,aside,section,nav,menu,hgroup {
 }
 
 .footerLayer {
-	border-radius: 10px;
+	border-radius: 0 0 10px 10px;
 	background: #FFF;
 	padding: 15px;
 	z-index: 999;
-	box-shadow: 1px 2px 5px #000
+	box-shadow: 0px 3px 3px #A7A3A3;
 }
 
 /*footer:End*/
