--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -9,8 +9,8 @@
         <ul class="pinBox">
 {% for i in items %}
          <li>
-                <img alt="{{ i.item.name }}" title="{{ i.item.name }}" src="{{ i.img.url }}" width="{{ i.img.width }}px" />
-                <div class="pinSide{{ i.img.width }}">
+                <img alt="{{ i.item.name }}" title="{{ i.item.name }}" data-src="{{ i.img.url }}" class="styp{{ i.typ }}" />
+                <div class="pinSide{{ i.typ }}">
                     <h2><a href="{{ request.nPath.标签 }}{{ i.item.name }}/">{{ i.item.name }}</a></h2>
                     <p class="pinDes">{{ i.item.itemdesc_set.getAll.0.desc }}</p>
                     <ul class="pinInfo">
